@@ -1,1 +1,1 @@
-a4 # default papersize
+p a4 # default papersize
