@@ -1,3 +1,8 @@
+2014-01-17  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* paper-size.c, data/paper.cfg: Modify and document the config
+	file format.  Close the config file.
+
 2014-01-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	Import psutils-1.23.
